--- a/manifest.yml
+++ b/manifest.yml
@@ -2,8 +2,8 @@ applications:
 - path: .
   memory: 256M
   instances: 1
-  domain: eu-de.mybluemix.net
-  name: spen
-  host: spen
+  domain: mybluemix.net
+  name: your_app_name
+  host: your_app_name
   disk_quota: 1024M
 
