--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "cloudant": "1.7.x",
         "easyimage": "2.1.x",
         "express": "4.1.x",
-        "ejs": "2.3.x",
+        "ejs": "2.5.5",
         "multer": "1.1.x",
         "body-parser": "1.17.x",
         "cfenv":"~1.0.0",
